--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Tim",
   "license": "ISC",
   "devDependencies": {
+    "@barba/core": "^2.9.7",
     "browser-sync": "^2.29.3",
     "del": "^6.1.1",
     "gulp": "^4.0.2",
@@ -16,8 +17,10 @@
     "gulp-concat": "^2.6.1",
     "gulp-file-include": "^2.3.0",
     "gulp-imagemin": "^7.1.0",
+    "gulp-include": "^2.4.1",
     "gulp-notify": "^4.0.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-replace": "^1.1.4",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-svg-sprite": "^2.0.3",
