create range slider and dropdow menu

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.7.1",
     "sass": "^1.69.5"
+  },
+  "dependencies": {
+    "nouislider": "^15.7.1"
   }
 }
