fix main and product

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gulp-svg-sprite": "^2.0.3",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.7.1",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "swiper": "^11.0.5"
   },
   "dependencies": {
     "nouislider": "^15.7.1"
